prepare for cran

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,55 +1,53 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # shinyChatR
 
 <!-- badges: start -->
-
-[![Test
-coverage](https://github.com/julianschmocker/shinyChatR/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/julianschmocker/shinyChatR/actions/workflows/test-coverage.yaml)
+[![Test coverage](https://github.com/julianschmocker/shinyChatR/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/julianschmocker/shinyChatR/actions/workflows/test-coverage.yaml)
 <!-- badges: end -->
 
-This package provides a reusable chat module for R Shiny apps. The
-module allows multiple users to connect to a common chat and send
-messages to each other in real-time.
+This package provides a reusable chat module for R Shiny apps. The module allows multiple users to connect to a common chat and send messages to each other in real-time.
 
-The messages can either be stored in a database or a rds data. Here is
-an example of the UI:
+The messages can either be stored in a database or a rds data. Here is an example of the UI:
 <center>
-<img src="https://github.com/julianschmocker/shinyChatR/blob/master/vignettes/figures/example_chat.png?raw=true" width="460" />
+![](https://github.com/julianschmocker/shinyChatR/blob/master/vignettes/figures/example_chat.png?raw=true){width=460}
 </center>
 
 ## Features
 
--   Real-time chat: messages are sent and received in real-time, without
-    the need to refresh the page. It is possible to specify how often
-    the data source should be read.
--   Multiple users: multiple users can connect to the chat room and send
-    messages to each other.
--   Persistent messages: chat messages are stored in a database or rds
-    file, allowing them to be retrieved and viewed even after a user
-    logs out or the app is closed.
+* Real-time chat: messages are sent and received in real-time, without the need to refresh the page. It is possible to specify how often the data source should be read.
+* Multiple users: multiple users can connect to the chat room and send messages to each other.
+* Persistent messages: chat messages are stored in a database or rds file, allowing them to be retrieved and viewed even after a user logs out or the app is closed.
 
 ## General Usage
 
 To use the chat module in your own Shiny app, follow these steps:
 
-1.  Install the package
-2.  Load the package `library("shinyChatR")`
-3.  Initialize the database table or rds file
-4.  Add chat module to the app
+1. Install the package 
+2. Load the package `library("shinyChatR")`
+3. Initialize the database table or rds file 
+4. Add chat module to the app
 
 The details of the different steps can be found below:
 
 ## Database connection for storing chat data
 
-If you are using a database connection to store the chat messages, you
-will need to initialize the database table before using the chat module.
-The following example shows an example how to do this using the `DBI`
-and `RSQLite` packages. Replace `db_file` with the path to your database
-file. The data will be saved in the table `chat_data`.
+If you are using a database connection to store the chat messages, you will need to initialize the database table before using the chat module. The following example shows an example how to do this using the `DBI` and `RSQLite` packages. Replace `db_file` with the path to your database file. The data will be saved in the table `chat_data`. 
 
-``` r
+```{r, eval = FALSE}
 library(DBI)
 library(RSQLite)
 
@@ -66,7 +64,7 @@ dbWriteTable(conn, "chat_data", df)
 
 Now you can add the chat module to your app:
 
-``` r
+```{r, eval = FALSE}
 library(shinyChatR)
 ui <- fluidPage(
   chat_ui("test")
@@ -86,7 +84,7 @@ shinyApp(ui = ui, server = server)
 
 A similar approach is required for rds data.
 
-``` r
+```{r, eval = FALSE}
 df <- data.frame(rowid = numeric(),
                  user = character(),
                  text = character(),
@@ -99,7 +97,7 @@ saveRDS(df, test_rds)
 
 Now you can add the chat module to your app:
 
-``` r
+```{r, eval = FALSE}
 library(shinyChatR)
 test_rds <- "path_to_rds_file.rds"
 
@@ -121,13 +119,14 @@ shinyApp(ui = ui, server = server)
 
 Install from CRAN with
 
-``` r
+```{r, eval = FALSE} 
 install.packages("shinyChatR")
 ```
 
 You can install the development version of shinyChatR from
 [GitHub](https://github.com/julianschmocker/shinyChatR) with:
 
-``` r
+```{r, eval = FALSE}
 remotes::install_github("julianschmocker/shinyChatR")
 ```
+
